--- a/weatherGift/Info.plist
+++ b/weatherGift/Info.plist
@@ -37,9 +37,14 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app will need access to your location to automatically find local weather</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app will need access to your location to automatically find local weather</string>
 </dict>
 </plist>
